packages/cli/src/__tests__/fixtures/multi-schema-files/invalid/default_schema_invalid-multi_schema_valid/prisma/schema/schema2.prisma
model Link {
  id        String   @id @default(uuid())
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  url       String
  shortUrl  String
  user      User?    @relation(fields: [userId], references: [id])
  userId    String?
}

model User {
  id        String    @id @default(uuid())
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  name      String?
  email     String    @unique
  links     Link[]
  date      DateTime?
}
